--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -1,3 +1,3 @@
-/*
-This css file is a placeholder. Use this or roll your own, choice is yours.
-*/
+body {background-color: #f9f9ff;}
+
+.error {color: #aa0000;}
